# smart-fridge-akyl

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/rules/: git-commit-workflow.mdc
backend/: cli.py
backend/app/: __init__.py  config.py  database.py  dev_tls.py  json_safe.py  logging_config.py  main.py  observability.py
backend/app/models/: __init__.py  entities.py
backend/app/modules/: barcode_decode.py  barcode_gtin.py  capture_api.py  date_parse.py  expiry_date.py  inventory_routes.py  inventory_service.py  national_catalog.py  notification_service.py  ofd_catalog_import.py  product_from_ocr.py  recipe_service.py  scheduler.py  vision_pipeline.py  vlm_fallback.py
backend/app/schemas/: __init__.py  dto.py
data/: recipes.json
scripts/: add-remote-and-push-gitbash.sh  create-and-push-gitbash.sh  push-to-github.ps1
tests/: conftest.py  test_barcode_fixture_decode.py  test_barcode_gtin.py  test_barcode_video_decode.py  test_capture_api.py  test_date_parse.py  test_expiry_fixture_decode.py  test_expiry_video_decode.py  test_health.py  test_inventory_api.py  test_inventory_service_unit.py  test_logging_config.py  test_national_catalog_cache.py  test_notification.py  test_notification_extra.py  test_ofd_catalog_import.py  test_paddle_ocr_extract.py  test_portal_tin.py  test_product_from_ocr.py  test_recipes_api.py  test_vision_confidence.py  test_vlm_fallback.py
tests/fixtures/expiry/: 16-08-2026.jfif  28-04-2026.jfif
tests/integration/: test_nestle_label_fixture.py  test_scan_inventory_integration.py  test_vlm_integration.py
tests/integration/fixtures/: README.txt
tests/integration/fixtures/barcode/: 7163287295798.jfif
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
