[project]
name = "smart-fridge"
version = "0.1.0"
description = "Personal fridge inventory, expiry tracking, and recipe hints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.17",
  "httpx>=0.27.0",
  "apscheduler>=3.10.4",
  "opencv-python-headless>=4.10.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
ocr = [
  "paddlepaddle>=3.0.0",
  "paddleocr>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
