[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-fridge"
version = "0.1.0"
description = "Personal fridge inventory, expiry tracking, and recipe hints"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.17",
  "httpx>=0.27.0",
  "apscheduler>=3.10.4",
  "opencv-python-headless>=4.10.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
# Tests + OCR helpers for local development. Paddle is omitted on Python ≥3.14 (no PyPI wheels yet).
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "respx>=0.21.1",
  "pillow>=10.0.0",
  "pytesseract>=0.3.10",
  'paddlepaddle>=2.6.0; python_version < "3.14"',
  'paddleocr>=2.7.0.3; python_version < "3.14"',
]

[project.scripts]
smart-fridge = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "integration: calls HTTP mocks or multi-step API flows",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
omit = ["backend/cli.py"]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
line-length = 100
target-version = "py311"
